Adjusting the return JSON of the transactions/userId/{userId} and transactions/transaction/{transactionId} endpoints
